@@ -3,6 +3,7 @@
   - Improved IPv6 exception handling in Mojo::IOLoop::Client.
   - Improved documentation.
   - Improved tests.
+  - Fixed array appending bug in Mojo::Parameters.
 
 2.97  2012-05-28
   - Added workaround to make IO::Socket::SSL work with IO::Socket::IP.
